[package]
name = "pool_barrier"
version = "0.1.0"
authors = ["James Millard <millard.jn@gmail.com>"]
description = "A barrier for blocking a main thread until the completion of work which has been offloaded to worker threads, without blocking the worker threads."
repository = "https://github.com/millardjn/pool_barrier"
documentation = "https://docs.rs/pool_barrier"
readme = "README.md"
keywords = ["barrier", "threadpool", "synchronize", "deadlock"]
categories = ["concurrency", "asynchronous"]
license = "MIT/Apache-2.0"
[dependencies]

[dev-dependencies]
rand = "0.3.15"